@@ -1,3 +1,7 @@
+For 1.18.5:
+	- Sound and AudioClip nodes should work again - problem with add_first and
+	  these nodes.
+
 For 1.18.4:
 	- javascript code that calls perl being rewritten.
 		(tests/52 added - uses createVrmlFromURL)
